--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-blinker==1.6.2
-click==8.1.3
-Flask==2.3.2
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-Werkzeug==2.3.6
-pip==23.1.2
-pytest==7.3.2
-flask_swagger_ui==4.11.1
+blinker
+click
+Flask
+itsdangerous
+Jinja2
+MarkupSafe
+Werkzeug
+pip == 23.2.0
+pytest
+flask_swagger_ui
 marshmallow
 pymongo
 certifi
