fix: lint C0115 Missing class docstring

--- a/.pylintrc
+++ b/.pylintrc
@@ -4,4 +4,4 @@
 max-line-length=120
 
 [MESSAGES CONTROL]
-disable=C0103,W0613,R0801,C0116,C0114,C0115
+disable=C0103,W0613,R0801,C0116,C0114,W0718,R0903,R0913,R0902
