feat: set werkzeug config to default behaviour print to console not save to file

--- a/logconfig/logging_config.json
+++ b/logconfig/logging_config.json
@@ -18,6 +18,10 @@
     "root": {
       "level": "DEBUG",
       "handlers": ["fileHandler"]
+    },
+    "werkzeug": {
+      "propagate": false,
+      "qualname": "werkzeug"
     }
   }
 }
